fix sizing bug for 'trek ahead' on index.html on smaller screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,6 +126,12 @@
   }
 }
 
+@media only screen and (max-width: 320px) {
+  #trek-ahead {
+    font-size: 2.5em;
+  }
+}
+
 .review-name {
   font-family: 'Noto Sans', sans-serif;
   text-align: center;
